# get-post-data

./: README.md  pyproject.toml
app/: MainWindow.py
