[tool.poetry]
name = "get-data"
version = "0.1.0"
description = ""
authors = ["tridn <tridnguyen97@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
PyQt5 = "^5.15.10"
pyqt5-qt5 = "5.15.2"
requests = "^2.31.0"
pyqtwebengine-qt5 = "5.15.2"
pyqt5-sip = "^12.13.0"
xlrd = "^2.0.1"
xlwt = "^1.3.0"
pyqtwebengine = "5.15.6"

[tool.poetry.scripts]
dev = "app.MainWindow:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
